--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-/* html,
+html {
+  -webkit-text-size-adjust: 100%;
+}
+
+/* 
 body {
   padding: 0;
   margin: 0;
