--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,7 +44,7 @@ html#ecwid_html body#ecwid_body .ec-minicart__icon .icon-default path[stroke] {
 html#ecwid_html body#ecwid_body .ec-minicart--m .ec-minicart__counter::after {
   background-color: #007aff !important;
 }
-html#ecwid_html body#ecwid_body .ec-size.ec-size--l .ec-store .ec-breadcrumbs {
+html#ecwid_html body#ecwid_body .ec-size .ec-store .ec-breadcrumbs {
   display: none !important;
 }
 
