--- a/styles/globals.css
+++ b/styles/globals.css
@@ -92,3 +92,18 @@ html#ecwid_html body#ecwid_body .ec-size .ec-store .ec-breadcrumbs {
     align-items: center;
   }
 }
+
+## Sanity Studio embed
+/* This assumes no margin or padding on #app's parent(s) */
+#app {
+  height: 100vh;
+  max-height: 100dvh;
+  overscroll-behavior: none;
+  -webkit-font-smoothing: antialiased;
+  overflow: auto;
+}
+
+/* Fix if you're using Tailwind.css */
+*:not([data-ui="Popover__arrow"]):not([data-ui="Tooltip__arrow"]) > svg {
+  display: inline;
+}
