--- a/styles/globals.css
+++ b/styles/globals.css
@@ -550,3 +550,24 @@ select[data-testid="field-group-select"] > option:first-child {
   text-overflow: ellipsis;
 }
 
+/* Inline Editing Drawer frame */
+.embed-container {
+  position: relative;
+  height: 0;
+  overflow-y: hidden;
+  max-width: 100%;
+  
+  /** aspect ratio: height/width = sample, 1080px/1920px = 0.5625 **/
+  padding-bottom: 95%;
+}
+
+.embed-container iframe { 
+  position: absolute;
+  width: 100%;
+  height: 100%; 
+
+  /** adjust position as needed to hide top/left sides **/
+  top: -74px;
+  left: -51.75px;
+}
+/* End */
