--- a/styles/globals.css
+++ b/styles/globals.css
@@ -554,8 +554,8 @@ select[data-testid="field-group-select"] > option:first-child {
 .embed-container {
   position: relative;
   height: 0;
-  overflow-y: hidden;
-  max-width: 100%;
+  overflow: auto;
+  width: 100%;
   
   /** aspect ratio: height/width = sample, 1080px/1920px = 0.5625 **/
   padding-bottom: 95%;
@@ -563,11 +563,11 @@ select[data-testid="field-group-select"] > option:first-child {
 
 .embed-container iframe { 
   position: absolute;
-  width: 100%;
-  height: 100%; 
+  width: calc(100% + 52px);
+  height: calc(100% + 142px);
 
   /** adjust position as needed to hide top/left sides **/
-  top: -74px;
-  left: -51.75px;
+  top: -155px;
+  left: -52px;
 }
 /* End */
