--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,7 +93,7 @@ html#ecwid_html body#ecwid_body .ec-size .ec-store .ec-breadcrumbs {
   }
 }
 
-## Sanity Studio embed
+/** Sanity Studio embed **/
 /* This assumes no margin or padding on #app's parent(s) */
 #app {
   height: 100vh;
