--- a/styles/globals.css
+++ b/styles/globals.css
@@ -107,3 +107,26 @@ html#ecwid_html body#ecwid_body .ec-size .ec-store .ec-breadcrumbs {
 *:not([data-ui="Popover__arrow"]):not([data-ui="Tooltip__arrow"]) > svg {
   display: inline;
 }
+
+.inline-document-pane div[data-testid="document-pane"] {
+  position: relative !important
+}
+
+.inline-field-label div[data-testid="field-label"] {
+  display: none !important;
+}
+
+.inline-field-variant div[data-testid="field-variant"] {
+  display: none !important;
+}
+
+.inline-panel div[data-testid="document-panel-scroller"] > div {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+
+.inline-pane-footer div[data-testid="pane-footer"] {
+  position: sticky !important;
+  bottom: 0;
+}
+/* End */
