--- a/styles/globals.css
+++ b/styles/globals.css
@@ -196,6 +196,18 @@ select[data-testid="field-group-select"] > option:first-child {
   z-index: 40;
 }
 
+/* Duplicate page settings modal */
+.modal-section:hover {
+  transition: all 300ms ease-in-out;
+  width: 100%;
+  margin: auto;
+}
+.replace-btn:hover .hide {
+  display: inline-flex;
+  top: 0;
+  right: 10px;
+}
+
 /** Help Guide **/
 div[aria-label="List of Content"] {
   min-height: calc(100vh - 260px);
