--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,24 +2,16 @@
 @tailwind components;
 @tailwind utilities;
 
+/**
+  IMPORTANT: ONLY ADD STYLES HERE IF THEY WILL BE USED GLOBALLY (IN ALL PAGES). 
+  IF NOT, THEN ADD THEM BY CSS MODULES (e.g. Products.module.css - contains all styling for product pages only).
+**/
+
+
 html {
   -webkit-text-size-adjust: 100%;
 }
 
-.swiper-slide-thumb-active img {
-  border: 1px solid #0045d8 !important;
-}
-.product-images-thumbs-swiper.swiper-container .swiper-slide {
-  height: 0 !important;
-  padding-bottom: 25%;
-}
-.product-images-thumbs-swiper.swiper-container .swiper-slide > div {
-  height: 0 !important;
-  padding-bottom: 100%;
-}
-.swiper-button-disabled {
-  opacity: 0.5 !important;
-}
 /* .cart-icon {
   @apply relative before:content-[attr(data-count)] before:absolute before:flex before:items-center before:justify-center before:bg-webriq-darkblue before:rounded-full before:h-6 before:w-6 before:-top-3 before:-right-3 before:text-white;
 } */
@@ -46,30 +38,6 @@ html#ecwid_html body#ecwid_body .ec-minicart--m .ec-minicart__counter::after {
 }
 html#ecwid_html body#ecwid_body .ec-size .ec-store .ec-breadcrumbs {
   display: none !important;
-}
-
-.product-images-swiper.swiper-container {
-  height: calc(auto + 1px);
-  /* position: relative; */
-}
-.product-images-swiper.swiper-container {
-  padding-top: 10px;
-}
-.product-images-swiper.swiper-container .swiper-wrapper {
-  position: relative;
-  height: 0 !important;
-  padding-bottom: 100%;
-}
-.product-images-swiper.swiper-container .swiper-slide {
-  height: 0 !important;
-  padding-bottom: 100%;
-}
-.product-images-swiper.swiper-container .swiper-slide > div {
-  height: 0 !important;
-  padding-bottom: 100%;
-}
-.toastContainer {
-  z-index: 1;
 }
 
 /* hide navigation sidebar when screen is less than screen size */
@@ -126,74 +94,6 @@ button#login-status-menu {
 /* Mobile: when using field groups, hide the first option */
 select[data-testid="field-group-select"] > option:first-child {
   display: none;
-}
-
-/* Inline Editing split pane */
-.nav-panesearch div[data-search-open] {
-  display: none !important;
-}
-.nav-paneheader div[data-testid="pane-header"] > div > div > div:nth-child(2) {
-  display: none !important;
-}
-.desk-listpane div[data-testid="desk-tool-list-pane"] {
-  display: none !important;
-}
-.document-pane div[data-testid="document-pane"] {
-  position: relative !important;
-}
-.field-label div[data-testid="field-label"] {
-  display: none !important;
-}
-.field-variant div[data-testid="field-variant"] {
-  display: none !important;
-}
-.panel div[data-testid="document-panel-scroller"] > div {
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-}
-.pane-footer div[data-testid="pane-footer"] {
-  position: sticky !important;
-  bottom: 0;
-}
-.fieldgroup-tabs div[data-ui="TabList"][data-testid="field-group-tabs"] {
-  display: none;
-}
-.fieldgroup-select
-  select[data-testid="field-group-select"]
-  > option:first-child {
-  display: none;
-}
-/* fieldgroup style for main product document */
-.product-fieldgroup-tabs
-  div[data-ui="TabList"][data-testid="field-group-tabs"]
-  > div:not(:nth-child(2)):not(:nth-child(3)) {
-  display: none;
-}
-.product-fieldgroup-select
-  select[data-testid="field-group-select"]
-  > option:not(:nth-child(2)):not(:nth-child(3)) {
-  display: none;
-}
-
-/* Inline Editing button and container */
-.hide {
-  display: none;
-}
-
-.inline-editor:hover {
-  transition: all 300ms ease-in-out;
-  box-shadow: 0px 0px 25px #0045d8;
-  z-index: 9;
-  width: 99%;
-  margin: auto;
-}
-
-.show-button:hover .hide {
-  display: inline-flex;
-  position: absolute;
-  top: 0;
-  right: 10px;
-  z-index: 40;
 }
 
 /* Duplicate page settings modal */
