Fixes (see description for details)
1. Resolve product info Swiper styling not applied issue (temp: move back custom Swiper CSS to global.css)
2. Resolve studio crash error on SEO preview tab (used existing imageUrlBuilder component `urlFor`)

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,8 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 
+/* ECWID COMPONENT CUSTOM STYLING */
+/* TODO: MIGRATE THIS TO CSS MODULE */
 /* .cart-icon {
   @apply relative before:content-[attr(data-count)] before:absolute before:flex before:items-center before:justify-center before:bg-webriq-darkblue before:rounded-full before:h-6 before:w-6 before:-top-3 before:-right-3 before:text-white;
 } */
@@ -59,6 +61,55 @@ html#ecwid_html body#ecwid_body .ec-size .ec-store .ec-breadcrumbs {
     left: 40%;
     align-items: center;
   }
+}
+
+/* PRODUCT INFO SWIPER CUSTOM STYLE */
+/* TODO: MIGRATE THIS TO CSS MODULE */
+.swiper-slide-thumb-active img {
+  border: 1px solid #0045d8 !important;
+}
+
+.product-images-thumbs-swiper.swiper-container .swiper-slide {
+  height: 0 !important;
+  padding-bottom: 25%;
+}
+
+.product-images-thumbs-swiper.swiper-container .swiper-slide>div {
+  height: 0 !important;
+  padding-bottom: 100%;
+}
+
+.swiper-button-disabled {
+  opacity: 0.5 !important;
+}
+
+.product-images-swiper.swiper-container {
+  height: calc(auto + 1px);
+  /* position: relative; */
+}
+
+.product-images-swiper.swiper-container {
+  padding-top: 10px;
+}
+
+.product-images-swiper.swiper-container .swiper-wrapper {
+  position: relative;
+  height: 0 !important;
+  padding-bottom: 100%;
+}
+
+.product-images-swiper.swiper-container .swiper-slide {
+  height: 0 !important;
+  padding-bottom: 100%;
+}
+
+.product-images-swiper.swiper-container .swiper-slide>div {
+  height: 0 !important;
+  padding-bottom: 100%;
+}
+
+.toastContainer {
+  z-index: 1;
 }
 
 /** Sanity Studio embed **/
