--- a/styles/globals.css
+++ b/styles/globals.css
@@ -179,5 +179,37 @@ ul[aria-label="List of Content"] > li:last-child:before {
   width: 100%;
   border-top: 1px solid var(--card-border-color);
 }
+ 
+/**** STUDIO > COMPONENTS > component filter ****/
+#component_filter .optionContainer li:hover,
+#component_filter .optionContainer .highlight {
+  background: #f2f3f5 !important;
+}
+
+/* hide default right icon */
+#component_filter .icon_down_dir {
+  display: none;
+}
+/* custom right icon */
+#component_filter:after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 35px;
+  border-left: 1px solid #ced2d9;
+  background: url("data:image/svg+xml,%3Csvg data-sanity-icon='chevron-down' width='1em' height='1em' viewBox='0 0 25 25' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 10.5L12.5 15L8 10.5' stroke='currentColor' stroke-width='1.2' stroke-linejoin='round'%3E%3C/path%3E%3C/svg%3E");
+  background-size: 25px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+/* add outline when dropdown is active/focused */
+#component_filter:has(.optionListContainer.displayBlock) .search-wrapper {
+  outline: 2px solid #2275FB;
+  outline-offset: 1px;
+}
+/**** end of STUDIO > COMPONENTS > component filter ****/
+
 
 /* End */
