--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -39,6 +43,19 @@ html#ecwid_html body#ecwid_body .ec-minicart--m .ec-minicart__counter::after {
 }
 html#ecwid_html body#ecwid_body .ec-size .ec-store .ec-breadcrumbs {
   display: none !important;
+}
+
+/*
+   Theme settings: Default dark mode background and text color 
+   To override this, add background and text color classes along with a 'dark:' prefix to target components
+
+   Example: 
+   <button className="bg-blue-500 text-white dark:bg-blue-50 text-blue-500">
+     Save
+   </button>
+*/
+:is(.dark) {
+  @apply bg-background text-white
 }
 
 /* hide navigation sidebar when screen is less than screen size */
